[gd_scene load_steps=6 format=3 uid="uid://b5j4o6f3waw6a"]

[ext_resource type="Script" uid="uid://fuwb6vgqvc17" path="res://scenes/game/game.gd" id="1_kelw5"]
[ext_resource type="PackedScene" uid="uid://bkfu62p86f6ud" path="res://scenes/plane/plane.tscn" id="2_7h61r"]
[ext_resource type="PackedScene" uid="uid://5agdhppy2jr1" path="res://scenes/parallax_bg/parallax_bg.tscn" id="2_lfrn8"]
[ext_resource type="PackedScene" uid="uid://hhvatftj2fco" path="res://scenes/barrier/barrier.tscn" id="3_0sr1o"]
[ext_resource type="PackedScene" uid="uid://c5jsq5jnfi40a" path="res://scenes/game_ui/game_ui.tscn" id="5_lfrn8"]

[node name="Game" type="Node2D"]
script = ExtResource("1_kelw5")

[node name="ParallaxBg" parent="." instance=ExtResource("2_lfrn8")]
scale = Vector2(0.791, 0.791)

[node name="Plane" parent="." instance=ExtResource("2_7h61r")]
position = Vector2(71, 422)

[node name="Barrier" parent="." instance=ExtResource("3_0sr1o")]

[node name="PipesHolder" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UpperPoint" type="Marker2D" parent="."]
position = Vector2(545, 144)

[node name="LowerPoint" type="Marker2D" parent="."]
position = Vector2(545, 710)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" parent="CanvasLayer" instance=ExtResource("5_lfrn8")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
